--- a/INSTALL
+++ b/INSTALL
@@ -7,6 +7,7 @@ Prerequisites
  * Python 2.7 or later (http://www.python.org/)
  * trytond (http://www.tryton.org/)
  * trytond-galatea
+ * trytond-galatea_cms
 
 Installation
 ------------
